[project]
name = "comfyui-quickimagesequenceprocess"
description = "A ComfyUI plugin for quick image sequence processing. This plugin allows users to manipulate frame sequences with various operations including frame insertion, deletion, and duplication."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["numpy", "torch"]

[project.urls]
Repository = "https://github.com/kazeyori/ComfyUI-QuickImageSequenceProcess"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kazeyori"
DisplayName = "ComfyUI-QuickImageSequenceProcess"
Icon = ""
